# game_of_life

./: CMakeLists.txt  main.cpp
renderer_lib/: main.cpp  main.hpp
rules_dll/: main.cpp  main.hpp
